--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,10 @@
     }
   }
 
+  .w-full.bg-white.dark\:bg-trader-black.bg-opacity-80.dark\:bg-opacity-80.backdrop-blur-lg.rounded-2xl.p-5.shadow-lg.border.border-trader-gray.border-opacity-20.dark\:border-opacity-20 {
+    display: none;
+}
+  
   .rotate-loader {
     animation: rotate 2s linear infinite;
   }
